--- a/package.json
+++ b/package.json
@@ -1,15 +1,36 @@
 {
-    "name": "tg",
+    "name": "discord-bot",
     "version": "1.0.0",
-    "description": "",
+    "description": "My First Ever Discord Bot",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
-    "license": "ISC",
+    "keywords": [
+        "discord-bot"
+    ],
+    "author": "Your Name",
+    "license": "MIT",
     "dependencies": {
-        "discord.js": "^12.3.1",
-        "node-fetch": "^2.6.1"
+        "boom": "^7.2.0",
+        "chalk": "^2.4.1",
+        "cryptiles": "^4.1.2",
+        "discord.js": "^11.3.2",
+        "eslint": "^5.1.0",
+        "express": "^4.15.2",
+        "ffmpeg-binaries": "^4.0.0",
+        "hawk": "^7.0.7",
+        "hoek": "^5.0.3",
+        "node-fetch": "^2.6.1",
+        "node-opus": "^0.2.7",
+        "random-org": "^0.1.5",
+        "raven": "^0.10.0",
+        "request": "^2.87.0",
+        "snekfetch": "^4.0.4",
+        "stylus": "^0.54.3",
+        "wikijs": "^3.0.5",
+        "wolfram-alpha": "^0.6.0",
+        "youtube-node": "^1.3.0",
+        "ytdl-core": "^0.21.1"
     }
 }
