--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Your Name",
     "license": "MIT",
     "dependencies": {
+        "@discordjs/opus": "^0.3.3",
         "boom": "^7.2.0",
         "chalk": "^2.4.1",
         "cryptiles": "^4.1.2",
@@ -19,6 +20,7 @@
         "eslint": "^5.1.0",
         "express": "^4.15.2",
         "ffmpeg-binaries": "^4.0.0",
+        "ffmpeg-static": "^4.2.7",
         "hawk": "^7.0.7",
         "hoek": "^5.0.3",
         "node-fetch": "^2.6.1",
