--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "discord-bot",
+    "name": "tgbot",
     "version": "1.0.0",
-    "description": "My First Ever Discord Bot",
+    "description": "Bot discord fun",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,33 +9,11 @@
     "keywords": [
         "discord-bot"
     ],
-    "author": "Your Name",
+    "author": "ROURET Lucas",
     "license": "MIT",
     "dependencies": {
-        "@discordjs/opus": "^0.3.3",
-        "boom": "^7.2.0",
-        "chalk": "^2.4.1",
-        "cryptiles": "^4.1.2",
         "discord.js": "^12.4.1",
-        "eslint": "^5.1.0",
-        "express": "^4.15.2",
-        "ffmpeg-binaries": "^4.0.0",
-        "ffmpeg-static": "^4.2.7",
-        "hawk": "^7.0.7",
-        "hoek": "^5.0.3",
         "node-fetch": "^2.6.1",
-        "node-opus": "^0.2.7",
-        "node-postgres": "^0.6.2",
-        "pg": "^8.4.2",
-        "picsum-photos": "^3.0.3",
-        "random-org": "^0.1.5",
-        "raven": "^0.10.0",
-        "request": "^2.87.0",
-        "snekfetch": "^4.0.4",
-        "stylus": "^0.54.3",
-        "wikijs": "^3.0.5",
-        "wolfram-alpha": "^0.6.0",
-        "youtube-node": "^1.3.0",
-        "ytdl-core": "^0.21.1"
+        "picsum-photos": "^3.0.6"
     }
 }
